After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663578 - _COGL_RETURN_IF_FAIL sometimes doesn't use glib
_COGL_RETURN_IF_FAIL sometimes doesn't use glib
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-11-07 18:36 UTC by Neil Roberts
Modified: 2011-11-14 18:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cogl-utils: Include cogl-defines.h (722 bytes, patch)
2011-11-07 18:36 UTC, Neil Roberts
accepted-commit_now Details | Review

Description Neil Roberts 2011-11-07 18:36:56 UTC
Some of the files using _COGL_RETURN_IF_FAIL aren't including
cogl-defines.h so they don't use glib.
Comment 1 Neil Roberts 2011-11-07 18:36:58 UTC
Created attachment 200911 [details] [review]
cogl-utils: Include cogl-defines.h

cogl-utils.h needs to include cogl-defines.h so that it knows whether
COGL_HAS_GLIB_SUPPORT is defined.
Comment 2 Emmanuele Bassi (:ebassi) 2011-11-07 19:18:19 UTC
Review of attachment 200911 [details] [review]:

seems pretty obvious to me.
Comment 3 Neil Roberts 2011-11-14 18:55:28 UTC
Pushed as 8be44f98766